# nestr-cli

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  NOTICE  README.md  SECURITY.md  build.rs  install.sh
.github/homebrew/: nestr-cli.rb.tmpl
.github/workflows/: lint.yml  release.yml  test.yml
skills/: README.md
skills/nestr-basics/: SKILL.md
skills/nestr-governance/: SKILL.md
skills/nestr-insights/: SKILL.md
skills/nestr-org/: SKILL.md
skills/nestr-webhooks/: SKILL.md
skills/shared/: reference.md
src/: api_client.rs  config.rs  error.rs  keyring_store.rs  lib.rs  main.rs  oauth.rs  render.rs  safety.rs  validation.rs  views.rs
src/commands/: auth.rs  circles.rs  comments.rs  export.rs  groups.rs  inbox.rs  insights.rs  labels.rs  links.rs  me.rs  mod.rs  nests.rs  notifications.rs  plan.rs  profiles.rs  projects.rs  roles.rs  search.rs  tensions.rs  users.rs  webhooks.rs  work.rs  workspaces.rs
tests/: api_client.rs  circles.rs  clean_text_params.rs  cli_args.rs  comments.rs  export.rs  groups.rs  inbox.rs  insights.rs  labels.rs  links.rs  me.rs  nests.rs  notifications.rs  path_guard.rs  plan.rs  projects.rs  refresh.rs  roles.rs  sanitize_render.rs  search.rs  skill_accuracy.rs  tensions.rs  users.rs  webhooks.rs  work.rs  workspaces.rs
