[package]
name = "nestr-cli"
version = "0.1.0"
edition = "2021"
description = "Nestr CLI — fast, composable access to Nestr for terminals and agents."
repository = "https://github.com/nestr-dev/nestr-cli"
license = "Apache-2.0"
default-run = "nestr"

[[bin]]
name = "nestr"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.37", features = ["derive", "env", "color"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "query", "form", "rustls-no-provider", "rustls-native-certs"], default-features = false }
rustls = { version = "0.23", features = ["ring"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
anyhow = "1"
thiserror = "2"
dirs = "6"
keyring = { version = "3", default-features = false }
inquire = "0.9"
rand = "0.10.1"
sha2 = "0.11"
base64 = "0.22"
open = "5"
url = "2"
colored = "3"
tabled = { version = "0.21", features = ["ansi"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# NOTE: musl builds have no keyring backend - users must use file-based credential storage
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
